# ResearchAgentNew

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/agent/: .env.example  README.md  RENDER.md  main.py  package.json  pyproject.toml  requirements.txt  stream_main.py
apps/agent/src/research_agent/: __init__.py  graph.py  llm.py  models.py  state.py  stream_cli.py
apps/agent/src/research_agent/nodes/: __init__.py  final_output.py  planner.py  researcher.py  summarizer.py
apps/agent/src/research_agent/tools/: __init__.py  search.py
apps/api/: README.md  RENDER.md  package.json
apps/api/src/: app.module.ts  main.ts
apps/api/src/research/: research.controller.ts  research.module.ts  research.service.ts
apps/api/src/research/agent/: agent-client.service.ts
apps/api/src/research/dto/: research-request.dto.ts
apps/api/src/research/types/: research-events.ts
apps/api/test/: app.e2e-spec.ts
apps/web/: README.md  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: ResearchForm.tsx  ResearchWorkspace.tsx  ResultsPanel.tsx  StreamPanel.tsx
apps/web/src/lib/: parse-result.ts  research-sse.ts  types.ts
apps/web/src/store/: research-store.ts
